# GD32-F30x

./: .gitignore  .gitmodules  CMakeLists.txt  Serial Debug Assistant.ini  build.bat  download.bat  readme.md
Application/ExecThread/: ExecThread.h  MainInit.c  ThreadIdle.c  ThreadSectionalCurrent.c  ThreadUartDecode.c
Application/service/: cmd.c  port.c  port.h  uart.c  uart.h
BoardApp/: CMakeLists.txt
BoardApp/LcosBoard/: BoardInit.c  BoardInit.h  ThreadFirstConsumer.c  ThreadSecondConsumer.c  ThreadUartEvent.c  at.c  basicApp.c  basicApp.h  cmd.c  ovp921.c
BoardApp/LcosBoard/at_cmd/: AtCmdHashTable.c  AtCmdHashTable.h  AtKeyHashTable.c  AtKeyHashTable.h  at_cmd.csv
BoardApp/LcosBoard/libvc/: CMakeLists.txt
BoardApp/LcosBoard/libvc/core/: rti_vc_common.h  rti_vc_dload.c  rti_vc_panel.c  rti_vc_regio.c
BoardApp/LcosBoard/libvc/core/rdc200a/: rdc200a.c  rdc200a_internal.h
BoardApp/LcosBoard/libvc/core/rdp250h/: rdp250h.c
BoardApp/LcosBoard/libvc/core/rdp370f/: rdp370f.c
BoardApp/LcosBoard/libvc/core/rdp550f/: rdp550f.c
BoardApp/LcosBoard/libvc/core/rdp700q/: rdp700q.c
BoardApp/LcosBoard/libvc/include/: rti_vc_api.h  rti_vc_config.h
BoardApp/LcosBoard/libvc/port/: rti_vc_delay.c  rti_vc_devif.c
BoardApp/OV_LcosBoard/: BoardInit.c  BoardInit.h  CMakeLists.txt  ThreadFirstConsumer.c  ThreadIdle.c  ThreadSecondConsumer.c  ThreadSectionalCurrent.c  ThreadUartDecode.c  ThreadUartEvent.c  at.c  basicApp.c  basicApp.h  cmd.c  ovp921.c  ovp921.h  ovp921_flash.c  ovp921_reg.h  save_data.c  save_data.h
BoardApp/SingalBoard/: BoardInit.c  BoardInit.h  ThreadIdle.c  ThreadSectionalCurrent.c  ThreadUartDecode.c  at.c  cmd.c
BoardApp/raontech_lcos/: BoardInit.c  BoardInit.h  CMakeLists.txt  ThreadFirstConsumer.c  ThreadSecondConsumer.c  ThreadUartEvent.c  at.c  basicApp.c  basicApp.h  cmd.c
BoardApp/raontech_lcos/at_cmd/: AtCmdHashTable.c  AtCmdHashTable.h  AtKeyHashTable.c  AtKeyHashTable.h  at_cmd.csv
BoardApp/raontech_lcos/libvc/: CMakeLists.txt
BoardApp/raontech_lcos/libvc/core/: rti_vc_dload.h  rti_vc_main.c  rti_vc_panel.h  rti_vc_rdc.c  rti_vc_rdc.h  rti_vc_regio.c  rti_vc_regio.h
BoardApp/raontech_lcos/libvc/core/rdc200/: rdc200.c  rdc200_flash_partitions.h
BoardApp/raontech_lcos/libvc/core/rdc200a/: rdc200a_flash.c  rdc200a_flash_partitions.h
BoardApp/raontech_lcos/libvc/core/rdp250h/: rdp250h.c
BoardApp/raontech_lcos/libvc/core/rdp360h/: rdp360h.c
BoardApp/raontech_lcos/libvc/core/rdp501h/: rdp501h.c
BoardApp/raontech_lcos/libvc/core/rdp502h/: rdp502h.c
BoardApp/raontech_lcos/libvc/core/rdp551f/: rdp551f.c
BoardApp/raontech_lcos/libvc/include/: rti_vc_config.h  rti_vc_types.h  rti_vc_version.h
BoardApp/raontech_lcos/libvc/port/: rti_vc_delay.c  rti_vc_devif.c  rti_vc_devif.h
Firmware/: CMakeLists.txt
Firmware/CMSIS/: CMakeLists.txt
Firmware/CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
Firmware/GD32F30x_standard_peripheral/: CMakeLists.txt
FreeRTOS/: FreeRTOSConfig.h
PeriphFunc/: CMakeLists.txt  adc.c  adc_mcu.h  dac.c  dac.h  eeprom.c  eeprom.h  i2c.c  i2c.h  port.c  port.h  timer.c  timer.h  uart.c  uart.h
Template/: CMakeLists.txt  gd32f30x_it.c  main.c  main.h  systick.c  systick.h
Template/Keil_project/: Project.uvgui.APPO  Project.uvopt  Project.uvproj  Project.uvproj.saved_uv4  Project.uvprojx
Template/My_Keil_project/: Core_Board.uvguix.APPO  Core_Board.uvoptx  Core_Board.uvprojx
Utilities/: CMakeLists.txt  gd32f307c_eval.c  utils.c  utils.h
cmake/: arm-none-eabi-gcc.cmake  example_add_libs.cmake  example_set_name.cmake
